--- a/index.html
+++ b/index.html
@@ -1,60 +1,23 @@
-
-<html>
+>
 <head>
-	<title>Qiosz and Malr</title>
-<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title> عنوان السورس</title>
+</head>
+<body>
+<h1>اسم السورس </h1>
+<div ><img src="CydiaIcon.png" alt="" style="width:100px"; > </div>
 
-	<link rel="apple-touch-icon" sizes="76x76" href="favicon-32x32.png">
-	
-	<link rel="mask-icon" href="steve-jobs.svg" color="red">
-	
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<base target="_blank"/> 
+<div class="name"><p>وصف السورس</p></div>
 
+<div><ul class="btns">
 
+<li><div class="cydia"><a href="cydia://url/https://cydia.saurik.com/api/share#?source=***"><button class="cydiabtn">CYDIA</button></a></div></li>
 
+<li><div class="sileo"> <a href="sileo://source/***"><button class="sileobtn">SILEO</button> </a></div></li>
 
+<li><div class="zebra"><a href="zbra://sources/add/***/"><button class="zebrabtn">ZEBRA</button> </a></div></li>
 
-<body class="pinstripe nolegacy">
-<panel>
-	
-	<div align="center"> 
-	
-	<block>
-		<p>مرحبا بك في سورس قيس</p>
-</block>
-	
-<block>
-	<p>ادوات خفيفه ومهمة بعضها محذوفة</p>
-	<p>ضيف لا افوتك</p>
-	<p>ادوات اساسية</p>
-	
-</block>
-
-<fieldset>
-	<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://qiosz.github.io/cydia/"><img src="./CydiaIcon.png" class="icon"><div><div><label><p>اضافة السورس للسيديا</p></label><label class="url"><p></p></label></div></div></a>
-</fieldset>
-<block>
-	<p>الــدعم الفني</p>
-</block>
-
-<fieldset>
-	<a href="mailto:gernaskaler@yahoo.com"><img src="./opened-email-envelope.png" class="icon"><div><div><label><p>لمراسلتي</p></label></div></div></a>
-</fieldset>
-
-<block>
-<a href="https://twitter.com/Qiosz">Twitter</a>
-</block>
-
-
-
-<footer> &copy; 2014 - 2017 Malr Rdd Inc. 
-
-	 
-
-	</div>
-	
-</panel>
+</ul></div>
 </body>
 </html>
