--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
->
+
+<html>
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +15,7 @@
 
 <li><div class="cydia"><a href="cydia://url/https://cydia.saurik.com/api/share#?source=***"><button class="cydiabtn">CYDIA</button></a></div></li>
 
-<li><div class="sileo"> <a href="sileo://https://p8pc.github.io/y//***"><button class="sileobtn">SILEO</button> </a></div></li>
+<li><div class="sileo"> <a href="sileo://source/https://p8pc.github.io/y/"><button class="sileobtn">SILEO</button> </a></div></li>
 
 <li><div class="zebra"><a href="zbra://sources/add/***/"><button class="zebrabtn">ZEBRA</button> </a></div></li>
 
